--- a/packages/ibm-products/src/components/Tearsheet/next/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/Tearsheet/next/_storybook-styles.scss
@@ -61,3 +61,12 @@ $block-class__next: #{c4p-settings.$pkg-prefix}--tearsheet__next;
 .#{$block-class__next}__summary-content {
   padding-block-start: $spacing-07;
 }
+
+.stackButtons {
+  position: absolute;
+  z-index: 9999;
+  display: flex;
+  gap: $spacing-01;
+  inset-block-start: 0;
+  inset-inline-start: 0;
+}
