--- a/packages/ibm-products-web-components/src/components/checklist/checklist.scss
+++ b/packages/ibm-products-web-components/src/components/checklist/checklist.scss
@@ -12,10 +12,11 @@ $css--plex: true !default;
 @use '@carbon/styles/scss/theme';
 @use '@carbon/styles/scss/colors';
 @use '@carbon/styles/scss/components/tag';
+@use '@carbon/ibm-products-styles/scss/config';
 @use '@carbon/ibm-products-styles/scss/components/Checklist/index' as checklist;
 
-$prefix: 'c4p';
-$carbon-prefix: 'cds';
+$prefix: config.$pkg-prefix;
+$carbon-prefix: config.$carbon-prefix;
 
 $baseClass: #{$prefix}--checklist;
 
