feat(stackblitz): fix pg header examples, format stackblitz code

--- a/packages/ibm-products-styles/src/components/PageHeader/_page-header.scss
+++ b/packages/ibm-products-styles/src/components/PageHeader/_page-header.scss
@@ -745,6 +745,7 @@ $duration: 1000ms;
     block-size: to-rem(40px);
 
     .#{$block-class}__breadcrumb-wrapper {
+      align-items: center;
       block-size: inherit;
     }
   }
