--- a/packages/ibm-products/src/components/PageHeader/next/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/PageHeader/next/_storybook-styles.scss
@@ -77,6 +77,7 @@ $stackblitz-block-class: c4p--page-header;
   block-size: 40px;
 
   .c4p--page-header__breadcrumb-wrapper {
+    align-items: center;
     block-size: inherit;
   }
 }
