--- a/packages/ibm-products-web-components/src/components/guide-banner/guide-banner-element.scss
+++ b/packages/ibm-products-web-components/src/components/guide-banner/guide-banner-element.scss
@@ -19,4 +19,4 @@ $prefix: config.$pkg-prefix;
 $carbon-prefix: config.$carbon-prefix;
 $block-class: #{$prefix}--guidebanner__element;
 
-// todo
+// todo with carousel implementation
