fix: tagset tag spacing

--- a/packages/ibm-products-web-components/examples/set-of-tags/src/set-of-tags.scss
+++ b/packages/ibm-products-web-components/examples/set-of-tags/src/set-of-tags.scss
@@ -25,6 +25,8 @@ $block-class: #{$prefix}--set-of-tags;
     box-sizing: border-box;
     display: flex;
     white-space: nowrap;
+    // Spacing between tags.
+    gap: 4px;
 
     &__popover-container {
       padding: 0.9rem;
