--- a/packages/ibm-products-styles/src/components/Tearsheet/_tearsheet_next.scss
+++ b/packages/ibm-products-styles/src/components/Tearsheet/_tearsheet_next.scss
@@ -33,6 +33,24 @@ $motion-duration: $duration-moderate-02;
     }
   }
 
+  &.#{$block-class__next}.#{$block-class__next}--has-ai-label
+    .#{$block-class__next}__container {
+    border: 1px solid transparent;
+
+    /* override carbon ai removing background gradient */
+    background:
+      linear-gradient(to top, var(--cds-layer), var(--cds-layer)) padding-box,
+      linear-gradient(
+          to bottom,
+          var(--cds-ai-border-start, #78a9ff),
+          var(--cds-ai-border-end, #d0e2ff)
+        )
+        border-box,
+      linear-gradient(to top, var(--cds-layer), var(--cds-layer)) border-box;
+    border-block-end: 0;
+    box-shadow: 0 4px 10px 2px $ai-drop-shadow;
+  }
+
   // Extra specificity to override Carbon default transition
   &.#{$block-class__next}.#{$block-class__next}
     .#{$block-class__next}__container {
@@ -348,6 +366,9 @@ $motion-duration: $duration-moderate-02;
 
   .#{$block-class__next}__main-content {
     position: relative;
+    @include utilities.ai-popover-gradient('default', 0, 'background');
+
+    box-shadow: inset 0 -80px 70px -65px $ai-inner-shadow;
   }
   .#{$pkg-prefix}--side-panel {
     position: absolute;
