feat(Tearsheet): stacking, unit test, design review changes and fixes (#8563)
* feat: tearsheet v2 initial changes

* fix: scroll button position in mobile ui

* fix: mark as preview candidate

* feat: side panel for right details on mobile screens

* fix: add mock test

* feat: add step and tab stories, influencer panel

* fix: review comments

* feat: portal support and narrow variant

* feat: add story for narrow and related fixes

* fix: stories fix

* feat: stacking tearsheets using stack provider

* fix: open to be optional

* feat: stacking in mobile view

* fix: stacking fixes on scale and opacity

* Update packages/ibm-products-styles/src/components/Tearsheet/_tearsheet_next.scss

Co-authored-by: Sinta Augustine <sintaaugustine@gmail.com>

* Update packages/ibm-products/src/components/Tearsheet/next/_storybook-styles.scss

Co-authored-by: Sinta Augustine <sintaaugustine@gmail.com>

* Update packages/ibm-products/src/components/Tearsheet/next/Tearsheet.test.js

Co-authored-by: Sinta Augustine <sintaaugustine@gmail.com>

* Update packages/ibm-products/src/components/Tearsheet/next/Tearsheet.tsx

Co-authored-by: Sinta Augustine <sintaaugustine@gmail.com>

* Update packages/ibm-products/src/components/Tearsheet/next/_story-assets/StepTearsheet.tsx

Co-authored-by: Sinta Augustine <sintaaugustine@gmail.com>

* Update packages/ibm-products/src/components/Tearsheet/next/Tearsheet.tsx

Co-authored-by: Sinta Augustine <sintaaugustine@gmail.com>

* Update packages/ibm-products/src/components/Tearsheet/next/_story-assets/StepTearsheet.tsx

Co-authored-by: Sinta Augustine <sintaaugustine@gmail.com>

* Update packages/ibm-products/src/components/Tearsheet/next/Tearsheet.stories.js

Co-authored-by: Sinta Augustine <sintaaugustine@gmail.com>

* Update packages/ibm-products/src/components/Tearsheet/next/TearsheetHeader.tsx

Co-authored-by: Sinta Augustine <sintaaugustine@gmail.com>

* Update packages/ibm-products/src/components/Tearsheet/next/Tearsheet.tsx

Co-authored-by:

--- a/packages/ibm-products/src/components/Tearsheet/next/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/Tearsheet/next/_storybook-styles.scss
@@ -10,6 +10,7 @@
 @use '@carbon/styles/scss/utilities/hide-at-breakpoint' as *;
 @use '@carbon/styles/scss/type';
 @use '@carbon/styles/scss/breakpoint' as *;
+@use '../../StepFlow/story-assets/Tearsheet/step-tearsheet';
 
 $block-class__next: #{c4p-settings.$pkg-prefix}--tearsheet__next;
 @mixin hideAtLargeScreens() {
@@ -60,5 +61,32 @@ $block-class__next: #{c4p-settings.$pkg-prefix}--tearsheet__next;
 .#{$block-class__next}__influencer,
 .#{$block-class__next}__main-content,
 .#{$block-class__next}__summary-content {
-  padding-block-start: $spacing-07;
+  padding-block: $spacing-07;
+}
+
+.stackButtons {
+  position: absolute;
+  z-index: 9999;
+  display: flex;
+  gap: $spacing-01;
+  inset-block-start: 0;
+  inset-inline-start: 0;
+  @include hide-at-sm;
+}
+
+.smallScreenButton {
+  position: absolute;
+  z-index: 9999;
+  display: flex;
+  gap: $spacing-01;
+  inset-block-start: 0;
+  inset-inline-start: $spacing-05;
+  @include hideAtLargeScreens();
+}
+.#{$block-class__next}__header-collapsed {
+  .#{$block-class__next}__header-title {
+    svg {
+      inline-size: $spacing-05;
+    }
+  }
 }
