--- a/packages/ibm-products-web-components/examples/create-side-panel/src/styles.scss
+++ b/packages/ibm-products-web-components/examples/create-side-panel/src/styles.scss
@@ -1,15 +1,25 @@
-/**
- * @license
- *
- * Copyright IBM Corp. 2025
- *
- * This source code is licensed under the Apache-2.0 license found in the
- * LICENSE file in the root directory of this source tree.
- */
+/*
+* Copyright IBM Corp. 2025, 2025
+*
+* This source code is licensed under the Apache-2.0 license found in the
+* LICENSE file in the root directory of this source tree.
+*/
 
-@use '@carbon/styles/scss/reset';
+$css--plex: true !default;
+
+/* Other Carbon settings. */
 @use '@carbon/styles/scss/theme';
 @use '@carbon/styles/scss/themes';
+@use '@carbon/styles/scss/type';
+@use '@carbon/styles/scss/colors';
+@use 'sass:map';
+@use '@carbon/styles';
+@use '@carbon/ibm-products-styles/scss/components/CreateSidePanel';
+
+$prefix: 'c4p';
+$carbon-prefix: 'cds';
+
+$block-class: #{$prefix}--create-side-panel;
 
 :root {
   @include theme.theme(themes.$white);
@@ -36,4 +46,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.#{$block-class}__form {
+  padding-inline-start: 1rem;
+}
+
+.#{$block-class}__form-title-text {
+  padding-block-start: 1rem;
+}
+
+.#{$block-class}__content-text {
+  padding-inline-end: calc(20% - 1rem);
 }
